k8s/base/infra/krakend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-svc
  namespace: krakend
  labels:
    app: krakend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: krakend
  type: ClusterIP
