k8s/base/infra/krakend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: krakend
  namespace: krakend
spec:
  gateways:
    - istio-system/main-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /127/api
      route:
      - destination:
          host: krakend-svc
          port:
            number: 80
