k8s/base/infra/krakend/virtualservice127.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: krakend-127
  namespace: krakend
spec:
  gateways:
    - cluster-infra/main-gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /127/
      route:
      - destination:
          host: krakend-svc
          port:
            number: 80
